# UPC_Thesis

./: .falsegitignore  .gitignore  .tags  LBMSolver.sub  Leeeeeeeeeeeeeme.txt  Notas_Codigo.txt  README.md  results.txt
8_7_16/: First_result.csv
code_1/: .CMakeLists.txt.swp  .tags  .~lock.Setup.xlsx#  CMakeLists.txt  CellFunctions.c  FilesReading.c  SetUpData.ini  Setup.xlsx  clean.sh  go.sh  go_noCMake.sh  main.c  rebuild.sh  run.sh  ~$Setup.xlsx
code_1/include/: BlockSizeDefiner.h  BoundaryConditions.h  CellFunctions.h  ComputeResiduals.h  FilesReading.h  FilesWriting.h  Iterate.h  ShellFunctions.h
code_1/src/: BoundaryConditions.c  CMakeLists.txt  CellFunctions.c  ComputeResiduals.c  FilesReading.c  FilesWriting.c  Iterate.c  ShellFunctions.c  main.c  tests.c  tests.h
